# monday-integration

./: .gitignore  main.py  pyproject.toml  scripts.py  types_model.py
tests/: test_main.py
